--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -1,22 +1,34 @@
 .slide {
-    position: relative;
-  }
-  
-  .text-overlay {
-    position: absolute;
-    top: 30%;
-    left: 2%;
-    
-    color:  #7B1FA2; 
-  }
-  
-  .text-overlay h2 {
-    font-size: 2rem; 
-    margin-bottom: 0.5rem;
-  }
-  
-  .text-overlay p {
-    font-size: 1rem; /* Adjust font size */
-    margin: 0;
-  }
-  
+  position: relative;
+}
+
+.text-overlay {
+  position: absolute;
+  top: 30%;
+  left: 2%;
+  color: #fff;
+  z-index: 1;
+}
+
+.text-overlay h2 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.text-overlay p {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.slide img {
+  object-fit: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.overlay {
+  position: absolute;
+ 
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
